--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "${CY-Nhom-2-Tailwind}",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts": {  
+"start": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch"
   },
   "private": true,
   "devDependencies": {
     "tailwindcss": "^3.4.13"
+  },
+  "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2"
   }
 }
